--- a/Modulo4/clase3_1/main.ipynb
+++ b/Modulo4/clase3_1/main.ipynb
@@ -172,9 +172,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.96\n",
+      "21.59\n",
+      "24.38\n",
+      "20.31\n",
+      "23.62\n",
+      "28.84\n",
+      "17.81\n",
+      "21.14\n",
+      "13.77\n",
+      "18.55\n",
+      "25.15\n",
+      "11.79\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m temeperatura\n\u001b[0;32m      8\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtemperatura\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msensor_temperatura\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtemperatura\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 8\u001b[0m, in \u001b[0;36msensor_temperatura\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m temeperatura \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(random\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m10.0\u001b[39m, \u001b[38;5;241m30.0\u001b[39m),\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01myield\u001b[39;00m temeperatura\n\u001b[1;32m----> 8\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import time\n",
@@ -183,7 +214,7 @@
     "    while True:\n",
     "        temeperatura = round(random.uniform(10.0, 30.0),2)\n",
     "        yield temeperatura\n",
-    "        time.sleep(1)\n",
+    "        time.sleep(3)\n",
     "\n",
     "for temperatura in sensor_temperatura():\n",
     "    print(temperatura)"
