--- a/Modulo4/clase4/main.ipynb
+++ b/Modulo4/clase4/main.ipynb
@@ -116,17 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A [('A', 1)]\n",
+      "A [('A', 1), ('A', '2')]\n",
       "B [('B', 2)]\n",
       "C [('C', 3)]\n",
-      "D [('D', 4)]\n"
+      "D [('D', 4)]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -134,7 +136,129 @@
     "datos = [('A', 1),('A','2'), ('B', 2), ('C', 3), ('D', 4)]\n",
     "\n",
     "for key, group in itertools.groupby(datos, lambda x: x[0]):\n",
-    "    print(key, list(group))"
+    "    print(key, list(group))\n",
+    "\n",
+    "# iter\n",
+    "datos = iter([1, 2, 3, 4, 5])\n",
+    "\n",
+    "it1, it2 = itertools.tee(datos)\n",
+    "print(list(it1))\n",
+    "print(list(it2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Producto cartesiano y concatenaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('azul', 'S'), ('azul', 'M'), ('azul', 'L'), ('verde', 'S'), ('verde', 'M'), ('verde', 'L'), ('rojo', 'S'), ('rojo', 'M'), ('rojo', 'L')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "colores = ['azul', 'verde', 'rojo']\n",
+    "tallas = ['S', 'M', 'L']\n",
+    "\n",
+    "print(list(itertools.product(colores, tallas)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'B', 'C', 'D', 'E', 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "b = ['A', 'B', 'C', 'D', 'E']\n",
+    "\n",
+    "print(list(itertools.chain(b, a)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tecnicas Avazandas con collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'a': [1]})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "d = collections.defaultdict(list)\n",
+    "d['a'].append(1)\n",
+    "\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'manzana': 4, 'pera': 3, 'naranja': 2})\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = ['manzana', 'pera', 'manzana', 'naranja', 'pera', 'manzana', 'naranja', 'manzana', 'pera']\n",
+    "contador = collections.Counter(frutas)\n",
+    "print(contador)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict({'a': 1, 'b': 2, 'c': 3})\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = collections.OrderedDict()\n",
+    "d['a'] = 1\n",
+    "d['b'] = 2\n",
+    "d['c'] = 3\n",
+    "print(d)"
    ]
   }
  ],
