--- a/Modulo4/clase 5/main.ipynb
+++ b/Modulo4/clase 5/main.ipynb
@@ -49,7 +49,7 @@
     "ecomerce.register(\"user\", \"1234\")\n",
     "\n",
     "# Esto esta mal seguin solid en su primera palabra S (Single Responsability Principle)\n",
-    "# La clase Ecomerce deberia tener una sola responsabilidad, que es manejar los usuarios no encriptar contraseñas"
+    "# La clase Ecomerce deberia tener una sola responsabilidads, que es manejar los usuarios no encriptar contraseñas"
    ]
   },
   {
@@ -178,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acelerando Bicicleta\n",
+      "Acelerando Coche\n"
+     ]
+    }
+   ],
    "source": [
     "class Vehiculo(ABC):\n",
     "    @abstractmethod\n",
@@ -207,8 +216,8 @@
     "\n",
     "bicicleta = Bicicleta()\n",
     "coche = Coche()\n",
-    "print(bicicleta.acelerar())\n",
-    "print(coche.acelerar())\n"
+    "bicicleta.acelerar()\n",
+    "coche.acelerar()\n"
    ]
   }
  ],
